--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -5,7 +5,7 @@
     </a>
  </li>
   <li>
-    <a href="{% url 'TalentoHumano:colaboradores-index' %}" title="Colaboradores" data-filter-tags="Colaboradores">
+    <a href="{% url 'TalentoHumano:colaboradores-index' 0 %}" title="Colaboradores" data-filter-tags="Colaboradores">
         <i class="far fa-user"></i>
         <span class="nav-link-text" data-i18n="nav.talentohumano_perfil-colaboradores">Colaboradores</span>
     </a>
