EVA-23 feat: Se agrega id=0 para direccionar al usuario al index de colaboradores sin filtro por contrato

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -29,7 +29,7 @@
                         <br>
                         <div class="col-md-10">
                             <small>
-                                <a class="far fa-3x far fa-home"  href="{% url 'TalentoHumano:colaboradores-index' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ir al índice de colaboradores"></a>
+                                <a class="far fa-3x far fa-home"  href="{% url 'TalentoHumano:colaboradores-index' 0 %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ir al índice de colaboradores"></a>
                             </small>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                                                     <button id="guardar" class="btn btn-primary btn-block">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
                                                                 </div>
                                                                 <div style="padding-left: 15px">
-                                                                    <a href="{% url 'TalentoHumano:colaboradores-index'  %}" class="btn btn-danger btn-block">Cancelar</a>
+                                                                    <a href="{% url 'TalentoHumano:colaboradores-index' 0  %}" class="btn btn-danger btn-block">Cancelar</a>
                                                                 </div>
                                                             </div>
                                                         </div>
