--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -38,7 +38,7 @@
                             {% endif %}
                         </div>
                         <div class="col-md-2" style="float: right" >
-                            {% select_tag contratos 'contrato_id' 'Todos' value=id_contrato primer_valor=True %}
+                            {% select_tag contratos 'contrato_id' 'Todos los contratos' value=id_contrato primer_valor=True %}
                         </div>
                     </div>
                     <div class="panel-container show">
