--- a/TalentoHumano/templates/TalentoHumano/correo/correo.html
+++ b/TalentoHumano/templates/TalentoHumano/correo/correo.html
@@ -3,99 +3,92 @@
 
 <head>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Asignación de nueva contraseña</title>
-  <style type="text/css">
-  body {margin: 0; padding: 0; min-width: 100%!important;}
-  img {height: auto;}
-  .content {width: 100%; max-width: 600px;}
-  .header {padding: 40px 30px 20px 30px;}
-  .innerpadding {padding: 30px 30px 30px 30px;}
-  .borderbottom {border-bottom: 1px solid #f2eeed;}
-  .subhead {font-size: 15px; color: #ffffff; font-family: sans-serif; letter-spacing: 10px;}
-  .h1, .h2, .bodycopy {color: #153643; font-family: sans-serif;}
-  .h1 {font-size: 33px; line-height: 38px; font-weight: bold;}
-  .h2 {padding: 0 0 15px 0; font-size: 24px; line-height: 28px; font-weight: bold;}
-  .bodycopy {font-size: 16px; line-height: 22px;}
-  .button {text-align: center; font-size: 18px; font-family: sans-serif; font-weight: bold; padding: 0 30px 0 30px;}
-  .button a {color: #ffffff; text-decoration: none;}
-  .footer {padding: 20px 30px 15px 30px;}
-  .footercopy {font-family: sans-serif; font-size: 14px; color: #ffffff;}
-  .footercopy a {color: #ffffff; text-decoration: underline;}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Asignación de nueva contraseña</title>
+    <style type="text/css">
+        body {margin: 0; padding: 0; min-width: 100%!important;}
+        img {height: auto;}
+        .content {width: 100%; max-width: 600px;}
+        .header {padding: 40px 30px 20px 30px;}
+        .innerpadding {padding: 30px 30px 30px 30px;}
+        .borderbottom {border-bottom: 1px solid #f2eeed;}
+        .subhead {font-size: 15px; color: #ffffff; font-family: sans-serif; letter-spacing: 10px;}
+        .h1, .h2, .bodycopy {color: #153643; font-family: sans-serif;}
+        .h1 {font-size: 33px; line-height: 38px; font-weight: bold;}
+        .h2 {padding: 0 0 15px 0; font-size: 24px; line-height: 28px; font-weight: bold;}
+        .bodycopy {font-size: 16px; line-height: 22px;}
+        .button {text-align: center; font-size: 18px; font-family: sans-serif; font-weight: bold; padding: 0 30px 0 30px;}
+        .button a {color: #ffffff; text-decoration: none;}
+        .footer {padding: 20px 30px 15px 30px;}
+        .footercopy {font-family: sans-serif; font-size: 14px; color: #ffffff;}
+        .footercopy a {color: #ffffff; text-decoration: underline;}
 
-  @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
-  body[yahoo] .hide {display: none!important;}
-  body[yahoo] .buttonwrapper {background-color: transparent!important;}
-  body[yahoo] .button {padding: 0px!important;}
-  body[yahoo] .button a {background-color: #e05443; padding: 15px 15px 13px!important;}
-  body[yahoo] .unsubscribe {display: block; margin-top: 20px; padding: 10px 50px; background: #2f3942; border-radius: 5px; text-decoration: none!important; font-weight: bold;}
-  }
+        @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
+            body[yahoo] .hide {display: none!important;}
+            body[yahoo] .buttonwrapper {background-color: transparent!important;}
+            body[yahoo] .button {padding: 0px!important;}
+            body[yahoo] .button a {background-color: #e05443; padding: 15px 15px 13px!important;}
+            body[yahoo] .unsubscribe {display: block; margin-top: 20px; padding: 10px 50px; background: #2f3942; border-radius: 5px; text-decoration: none!important; font-weight: bold;}
+        }
 
-  /*@media only screen and (min-device-width: 601px) {
-    .content {width: 600px !important;}
-    .col425 {width: 425px!important;}
-    .col380 {width: 380px!important;}
-    }*/
+        /*@media only screen and (min-device-width: 601px) {
+          .content {width: 600px !important;}
+          .col425 {width: 425px!important;}
+          .col380 {width: 380px!important;}
+          }*/
 
-  </style>
+    </style>
 </head>
 
 <body yahoo bgcolor="#f1f6f8">
 <table width="80%" bgcolor="#f1f6f8" border="0" cellpadding="0" cellspacing="0">
-<tr>
-  <td>
+    <tr>
+        <td>
+            <table bgcolor="#f1f6f8" class="content" align="center" cellpadding="0" cellspacing="0" border="0">
+                <tr>
+                    <td bgcolor="#f1f6f8" class="header">
+                        <table width="70" align="left" border="0" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <td height="0" style="padding: 0 0px 0px 0;">
+                                    {% load static %}
+                                    <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" alt="My image" width="350" height="120" border="0">
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="innerpadding borderbottom">
+                        <table width="80%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td class="h2" align='left'>
+                                </td>
+                            <tr>
+                            </tr>
+                            <p>Hola {{ nombre }}, te estamos enviando este correo para que asignes una nueva contraseña a tu cuenta en Arios Ingeniería SAS.</p>
 
-    <table bgcolor="#f1f6f8" class="content" align="center" cellpadding="0" cellspacing="0" border="0">
-      <tr>
-        <td bgcolor="#f1f6f8" class="header">
-          <table width="70" align="left" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td height="0" style="padding: 0 0px 0px 0;">
 
-                {% load static %}
-                  <img src="https://empleos.universia.net.co/resources/logos_emp/Logo_720280.jpg" alt="My image" width="350" height="120" border="0" alt="">
+                            <p>Tu usuario es: {{usuario}}</p>
 
-              </td>
-            </tr>
-          </table>
+                            <p>El siguiente link te redireccionará a la página donde puedes realizar el cambio:</p>
 
+                            <a href="http://{{dominio}}/password-reset-confirm/{{uidb64}}/{{token}}">Ir a la página para asignación de nueva contraseña</a>
 
+                            <p>Si al hacer click no funciona simplemente copia y pega la URL en tu buscador favorito.</p>
+
+                            <tr>
+                                <td class="bodycopy">
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    </td>
+                </tr>
+            </table>
         </td>
-      </tr>
-      <tr>
-        <td class="innerpadding borderbottom">
-          <table width="80%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td class="h2" align='left'>
-
-              </td>
-              <tr>
-
-              </tr>
-              <p>Hola {{ nombre }}, te estamos enviando este correo para que asignes una nueva contraseña a tu cuenta en Arios Ingeniería SAS.</p>
-
-
-                <p>Tu usuario es: {{usuario}}</p>
-
-                <p>El siguiente link te redireccionará a la página donde puedes realizar el cambio:</p>
-
-                <a href="http://{{dominio}}/password-reset-confirm/{{uidb64}}/{{token}}">Ir a la página para asignación de nueva contraseña</a>
-
-                <p>Si al hacer click no funciona simplemente copia y pega la URL en tu buscador favorito.</p>
-
-            <tr>
-              <td class="bodycopy">
-
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-
-
-    </td>
-  </tr>
+    </tr>
 </table>
 </body>
 </html>
