EVA-24 refactor: Se define url para ingresar al index de la aplicación una vez se ha asignado la nueva contraseña

--- a/TalentoHumano/templates/TalentoHumano/correo/password_reset_complete.html
+++ b/TalentoHumano/templates/TalentoHumano/correo/password_reset_complete.html
@@ -1,9 +1,3 @@
-{#{% block content %}#}
-{#<h2>La contraseña se cambió con éxito</h2>#}
-{#    <a href="{% url 'inventario:iniciar-sesion' %}" >Ingresar a la página principal</a>#}
-{##}
-{#{% endblock %}#}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -79,7 +73,7 @@
 
               </tr>
                 <h2>La contraseña se cambió con éxito</h2>
-                <a href="{% url 'inventario:iniciar-sesion' %}" >Ingresar a la página principal</a>
+                <a href="{% url 'eva-index' %}" >Ingresar a la página principal</a>
             <tr>
               <td class="bodycopy">
 
