--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -1,5 +1,5 @@
  <li>
-    <a href="{% url 'TalentoHumano:entidades-index' 0 %}" title="Entidades CAFE" data-filter-tags="entidades cafe">
+    <a href="{% url 'TalentoHumano:entidades-cafe-index' 0 %}" title="Entidades CAFE" data-filter-tags="entidades cafe">
         <i class="far fa-hand-receiving"></i>
         <span class="nav-link-text" data-i18n="nav.talentohumano_entidades-cafe">Entidades CAFE</span>
     </a>
