--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/crear-editar.html
@@ -27,9 +27,9 @@
                             <div class="panel-group">
                                 <div class="panel-body">
                                      {% if opcion == 'editar' %}
-                                    <form action="{% url 'TalentoHumano:entidades-editar' entidad_cafe.id %}" id="entidades-form" method="post" class="needs-validation" novalidate>
+                                    <form action="{% url 'TalentoHumano:entidades-cafe-editar' entidad_cafe.id %}" id="entidades-form" method="post" class="needs-validation" novalidate>
                                      {% else %}
-                                    <form action="{% url 'TalentoHumano:entidades-crear' %}" id="entidades-form" method="post" class="needs-validation" novalidate>
+                                    <form action="{% url 'TalentoHumano:entidades-cafe-crear' %}" id="entidades-form" method="post" class="needs-validation" novalidate>
                                      {% endif %}
                                         {% csrf_token %}
                                         {{ entid }}
@@ -75,7 +75,7 @@
                                                     <button id="guardar" class="btn btn-primary btn-block">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
                                                 </div>
                                                 <div style="padding-left: 15px">
-                                                    <a href="{% url 'TalentoHumano:entidades-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
+                                                    <a href="{% url 'TalentoHumano:entidades-cafe-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
                                                 </div>
                                             </div>
                                     </form>
