--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -114,6 +114,9 @@
             //initialize filter
             initApp.listFilter($('#js-contacts'), $('#js-filter-contacts'));
         });
+        $(document).ready(function () {
+		    $('.select2').select2();
+		});
 
     </script>
 {% endblock scripts%}
