--- a/TalentoHumano/templates/TalentoHumano/correo/password_reset_confirm.html
+++ b/TalentoHumano/templates/TalentoHumano/correo/password_reset_confirm.html
@@ -1,126 +1,126 @@
+<!DOCTYPE html>
+{% load static %}
 
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html lang="en">
 <head>
-
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Asignación de nueva contraseña</title>
-  <style type="text/css">
-  body {margin: 0; padding: 0; min-width: 100%!important;}
-  img {height: auto;}
-  .content {width: 100%; max-width: 600px;}
-  .header {padding: 40px 30px 20px 30px;}
-  .innerpadding {padding: 30px 30px 30px 30px;}
-  .borderbottom {border-bottom: 1px solid #f2eeed;}
-  .subhead {font-size: 15px; color: #ffffff; font-family: sans-serif; letter-spacing: 10px;}
-  .h1, .h2, .bodycopy {color: #153643; font-family: sans-serif;}
-  .h1 {font-size: 33px; line-height: 38px; font-weight: bold;}
-  .h2 {padding: 0 0 15px 0; font-size: 24px; line-height: 28px; font-weight: bold;}
-  .bodycopy {font-size: 16px; line-height: 22px;}
-  .button {text-align: center; font-size: 18px; font-family: sans-serif; font-weight: bold; padding: 0 30px 0 30px;}
-  .button a {color: #ffffff; text-decoration: none;}
-  .footer {padding: 20px 30px 15px 30px;}
-  .footercopy {font-family: sans-serif; font-size: 14px; color: #ffffff;}
-  .footercopy a {color: #ffffff; text-decoration: underline;}
-
-  @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
-  body[yahoo] .hide {display: none!important;}
-  body[yahoo] .buttonwrapper {background-color: transparent!important;}
-  body[yahoo] .button {padding: 0px!important;}
-  body[yahoo] .button a {background-color: #e05443; padding: 15px 15px 13px!important;}
-  body[yahoo] .unsubscribe {display: block; margin-top: 20px; padding: 10px 50px; background: #2f3942; border-radius: 5px; text-decoration: none!important; font-weight: bold;}
-  }
-
-  /*@media only screen and (min-device-width: 601px) {
-    .content {width: 600px !important;}
-    .col425 {width: 425px!important;}
-    .col380 {width: 380px!important;}
-    }*/
-
-  </style>
+    <meta charset="utf-8">
+    <title>
+        Cambiar contraseña
+    </title>
+    <meta name="description" content="Login">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimal-ui">
+    <!-- Call App Mode on ios devices -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Remove Tap Highlight on Windows Phone IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+    <!-- base css -->
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/vendors.bundle.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static  'EVA/Plantilla/css/app.bundle.css' %}">
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'EVA/Plantilla/img/favicon/apple-touch-icon.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png'%}">
+    <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg'%}" color="#5bbad5">
+    <!-- Optional: page related CSS-->
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css'%}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
 </head>
-
-<body yahoo bgcolor="#f1f6f8">
-<table width="80%" bgcolor="#f1f6f8" border="0" cellpadding="0" cellspacing="0">
-<tr>
-  <td>
-
-    <table bgcolor="#f1f6f8" class="content" align="center" cellpadding="0" cellspacing="0" border="0">
-      <tr>
-        <td bgcolor="#f1f6f8" class="header">
-          <table width="70" align="left" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td height="0" style="padding: 0 0px 0px 0;">
-
-                {% load static %}
-                  <img src="{% static "Inventario/Arios.jpg" %}" alt="My image" width="350" height="120" border="0" alt="">
-
-              </td>
-            </tr>
-          </table>
-
-
-        </td>
-      </tr>
-      <tr>
-        <td class="innerpadding borderbottom">
-          <table width="80%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td class="h2" align='left'>
-
-              </td>
-              <tr>
-
-              </tr>
-              {% if validlink %}
-
-        <form action="" method="post">
-            <div style="display:none">
-                <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-            </div>
-            <h2>Creación de nueva contraseña</h2>
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Digite contraseña:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirme contraseña:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Guardar cambios" /></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Se ha presentado un error.</h1>
-        <p>El link para cambio de contraseña no es válido, posiblemente ya fue usado. <br />
-         Por favor comuníquese con Arios Ingeniería SAS para el envío de uno nuevo.</p>
+<body>
+<div class="messages">
+    {% if messages %}
+        {% for message in messages %}
+            <input class="alert.{{ message.tags }}" style="display: none" id="mensaje" value="{{ message }}">
+        {% endfor %}
     {% endif %}
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
-            <tr>
-              <td class="bodycopy">
+</div>
+<div class="page-wrapper">
+    <div class="page-inner bg-brand-gradient">
+        <div class="page-content-wrapper bg-transparent m-0">
 
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
+            <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg'%}') no-repeat center bottom fixed; background-size: cover ">
+                <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
+                    <div class="row">
+                    <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
+                            <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
+                                Secure login
+                            </h1>
+                            <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
+                                <div style="display: flex; justify-content: center;">
+                                    <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 80%">
+                                </div>
+                                <br>
+                                {% if validlink %}
+                                    <form action="" method="post">
+                                        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+                                        {{ form.new_password1.errors }}
+                                        <div class="form-group">
+                                            <label class="id_new_password1" for="usuario">Contraseña</label>
+                                            <input type="password" id="id_new_password1" name="new_password1" class="form-control" placeholder="Digite la contraseña"  required>
+                                            <div class="invalid-feedback">Por favor digite la contraseña</div>
+                                        </div>
+                                        {{ form.new_password2.errors }}
+                                        <div class="form-group">
+                                            <label class="id_new_password2" for="contraseña">Confirmación de Contraseña</label>
+                                            <input type="password" id="id_new_password2" name="new_password2" class="form-control form-control-lg" placeholder="Confirme la contraseña"  required style="font-size: 0.8125rem;">
+                                            <div class="invalid-feedback">Por favor digite la contraseña</div>
+                                        </div>
+                                        <div class="row no-gutters" style="justify-content: center">
+                                            <div class="col-lg-8 pl-lg-1 my-2">
+                                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Cambiar contraseña</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                {% else %}
+                                    <h1 style="text-align: center">Se ha presentado un error.</h1>
+                                    <p style="text-align: center">El enlace para el cambio de contraseña no es válido, posiblemente ya fue usado. <br />
+                                        Por favor comuníquese con Arios Ingeniería SAS.</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- base vendor bundle:
+     DOC: if you remove pace.js from core please note on Internet Explorer some CSS animations may execute before a page is fully loaded, resulting 'jump' animations
+                + pace.js (recommended)
+                + jquery.js (core)
+                + jquery-ui-cust.js (core)
+                + popper.js (core)
+                + bootstrap.js (core)
+                + slimscroll.js (extension)
+                + app.navigation.js (core)
+                + ba-throttle-debounce.js (core)
+                + waves.js (extension)
+                + smartpanels.js (extension)
+                + src/../jquery-snippets.js (core) -->
+<script src="{% static 'EVA/Plantilla/js/vendors.bundle.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/app.bundle.js'%}"></script>
+<script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/notifications/toastr/toastr.js' %}"></script>
+<script src="{% static 'EVA/Plantilla/js/custom/notificacion_toast.js' %}"></script>
+<script>
+    $("#js-login-btn").click(function(event)
+    {
 
+        // Fetch form to apply custom Bootstrap validation
+        var form = $("#js-login")
 
-    </td>
-  </tr>
-</table>
+        if (form[0].checkValidity() === false)
+        {
+            event.preventDefault()
+            event.stopPropagation()
+        }
+
+        form.addClass('was-validated');
+        // Perform ajax submit here...
+    });
+
+</script>
 </body>
+{% include 'EVA/_common/footer.html' %}
 </html>
