--- a/TalentoHumano/templates/TalentoHumano/correo/password_reset_confirm.html
+++ b/TalentoHumano/templates/TalentoHumano/correo/password_reset_confirm.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Cambiar contraseña
+        Cambio de contraseña
     </title>
     <meta name="description" content="Login">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
