--- a/Administracion/templates/Administracion/correo/password_reset_confirm.html
+++ b/Administracion/templates/Administracion/correo/password_reset_confirm.html
@@ -52,7 +52,7 @@
                                 </div>
                                 <br>
                                 {% if validlink %}
-                                    <form action="" method="post">
+                                    <form action="" method="post" class="needs-validation" novalidate>
                                         <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
                                         {{ form.new_password1.errors }}
                                         <div class="form-group">
