--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -42,13 +42,13 @@
                 <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
                     <div class="row">
                         <div class="col col-md-6 col-lg-7 hidden-sm-down">
-                            <h2 class="fs-xxl fw-500 mt-4 text-white">
+                            <h1 class="fs-xxl fw-500 mt-4 text-white">
                                 EVA
                                 <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
                                     Espacio Virtual de Arios
                                 </small>
 
-                            </h2>
+                            </h1>
                             <br><br><br>
                              <img src="{% static 'EVA/Plantilla/img/logo-transparente.png' %}" style="width: 100%; opacity: 20%">
                         </div>
@@ -74,7 +74,7 @@
                                         <div class="invalid-feedback">Por favor digite su contraseña</div>
                                     </div>
                                     <div class="form-group text-left">
-                                        <a href="javascript:void(0)" >
+                                        <a href="{% url 'Administracion:olvido-contrasena' %}" >
                                             ¿Olvidó su contraseña?
                                         </a>
                                     </div>
