--- a/Administracion/templates/Administracion/correo/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/correo/olvido_contrasena.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css'%}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
 </head>
 <body>
 <div class="messages">
@@ -41,7 +42,7 @@
             <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg'%}') no-repeat center bottom fixed; background-size: cover ">
                 <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
                     <div class="row">
-                    <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
+                        <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
                             <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
                                 Secure login
@@ -51,19 +52,24 @@
                                     <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 80%">
                                 </div>
                                 <br>
-                                    <form action="{% url 'Administracion:olvido-contrasena' %}" method="post" class="needs-validation" novalidate>
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                            <label class="id_correo" for="usuario">Correo electrónico</label>
-                                            <input type="email" id="id_correo" name="email" class="form-control" placeholder="Digite su correo electrónico"  required>
-                                            <div class="invalid-feedback">Por favor digite su correo electrónico</div>
+                                <form action="{% url 'Administracion:olvido-contrasena' %}" method="post" class="needs-validation" novalidate>
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label class="id_correo" for="usuario">Correo electrónico</label>
+                                        <input type="email" id="id_correo" name="email" class="form-control" placeholder="Digite su correo electrónico"  required>
+                                        <div class="invalid-feedback">Por favor digite su correo electrónico</div>
+                                    </div>
+                                    <div class="row no-gutters" style="justify-content: center">
+                                        <div class="col-lg-8 pl-lg-1 my-2">
+                                            <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Enviar solicitud</button>
                                         </div>
-                                        <div class="row no-gutters" style="justify-content: center">
-                                            <div class="col-lg-8 pl-lg-1 my-2">
-                                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Cambiar contraseña</button>
-                                            </div>
+                                    </div>
+                                    <div class="row no-gutters" style="justify-content: center">
+                                        <div class="col-lg-8 pl-lg-1 my-2" >
+                                            <a href="{% url 'Administracion:iniciar-sesion'  %}"  class="btn btn-outline-default btn-block btn-xs"><small class="fw-300 mt-3 mb-5 opacity-90">Volver</small></a>
                                         </div>
-                                    </form>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
