--- a/Administracion/templates/Administracion/correo/password_reset_confirm.html
+++ b/Administracion/templates/Administracion/correo/password_reset_confirm.html
@@ -68,7 +68,7 @@
                                         </div>
                                         <div class="row no-gutters" style="justify-content: center">
                                             <div class="col-lg-8 pl-lg-1 my-2">
-                                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Cambiar contraseña</button>
+                                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block">Cambiar contraseña</button>
                                             </div>
                                         </div>
                                     </form>
