EVA-24 refactor: Se cambia el tamaño del botón iniciar sesión.

--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -43,11 +43,10 @@
                     <div class="row">
                         <div class="col col-md-6 col-lg-7 hidden-sm-down">
                             <h1 class="fs-xxl fw-500 mt-4 text-white">
-                                EVA
+                                <FONT SIZE=7>EVA</FONT>
                                 <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
                                     Espacio Virtual de Arios
                                 </small>
-
                             </h1>
                             <br><br><br>
                              <img src="{% static 'EVA/Plantilla/img/logo-transparente.png' %}" style="width: 100%; opacity: 20%">
@@ -80,7 +79,7 @@
                                     </div>
                                     <div class="row no-gutters">
                                         <div class="col-lg-6 pl-lg-1 my-2">
-                                            <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-lg">Iniciar sesión</button>
+                                            <button id="js-login-btn" type="submit" class="btn btn-danger btn-block ">Iniciar sesión</button>
                                         </div>
                                     </div>
                                 </form>
