--- a/Administracion/templates/Administracion/correo/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/correo/olvido_contrasena.html
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class="row no-gutters" style="justify-content: center">
                                         <div class="col-lg-8 pl-lg-1 my-2">
-                                            <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Enviar solicitud</button>
+                                            <button id="js-login-btn" type="submit" class="btn btn-danger btn-block ">Enviar solicitud</button>
                                         </div>
                                     </div>
                                     <div class="row no-gutters" style="justify-content: center">
