--- a/Administracion/templates/Administracion/correo/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/correo/olvido_contrasena.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Reiniciar contraseña
+        Solicitar contraseña
     </title>
     <meta name="description" content="Login">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
