--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -1,6 +1,13 @@
- <li>
-        <a href="{% url 'Administracion:terceros' %}" title="Terceros" data-filter-tags="terceros">
-            <i class="far fa-handshake"></i>
-            <span class="nav-link-text" data-i18n="nav.th_terceros">Terceros</span>
-        </a>
-    </li>
+<li>
+    <a href="{% url 'Administracion:terceros' %}" title="Terceros" data-filter-tags="terceros">
+        <i class="far fa-handshake"></i>
+        <span class="nav-link-text" data-i18n="nav.administracion_terceros">Terceros</span>
+    </a>
+</li>
+<li>
+    <a href="{% url 'Administracion:empresas' %}" title="Empresas" data-filter-tags="empresas">
+        <i class="far fa-briefcase"></i>
+        <span class="nav-link-text" data-i18n="nav.administracion_empresas">Empresas</span>
+    </a>
+</li>
+
