EVA-25 refactor: Se pluraliza título de la plantilla.

--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -1,6 +1,6 @@
 {% extends 'Administracion/_common/base_administracion.html' %}
 {% load static %}
-<title>{% block titulo %}Tercero{% endblock %}</title>
+<title>{% block titulo %}Terceros{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
