EVA-22 feat: Se agrega que se pueda cerrar sesión desde el botón del quick-menu destinado para tal fin.

--- a/EVA/templates/EVA/_common/quick_menu.html
+++ b/EVA/templates/EVA/_common/quick_menu.html
@@ -8,7 +8,7 @@
     <a href="#" class="menu-item btn" data-toggle="tooltip" data-placement="left" title="Scroll Top">
         <i class="fal fa-arrow-up"></i>
     </a>
-    <a href="#" class="menu-item btn" data-toggle="tooltip" data-placement="left" title="Cerrar Sesión">
+    <a href="{% url 'administracion:cerrar-sesion' %}" class="menu-item btn" data-toggle="tooltip" data-placement="left" title="Cerrar Sesión">
         <i class="fal fa-sign-out"></i>
     </a>
     <a href="#" class="menu-item btn" data-action="app-fullscreen" data-toggle="tooltip" data-placement="left" title="Pantalla Completa">
