--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -43,9 +43,9 @@
                     <div class="row">
                         <div class="col col-md-6 col-lg-7 hidden-sm-down">
                             <h2 class="fs-xxl fw-500 mt-4 text-white">
-                                Espacio Virtual  Arios
+                                E V A
                                 <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
-                                    Inicio de sesión
+                                    Espacio Virtual de ARIOS
                                 </small>
                             </h2>
                             <br><br><br>
