--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -57,7 +57,7 @@
                             <div class="info-card-text">
                                 <a href="#" class="d-flex align-items-center text-white">
                                     <span class="text-truncate text-truncate-sm d-inline-block">
-                                        {{  request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}
+                                        <a style="color: white" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver perfil" href="{% url 'TalentoHumano:colaboradores-perfil' request.session.colaborador_id %}"> {{  request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}</a>
                                     </span>
                                 </a>
                                 <span class="d-inline-block text-truncate text-truncate-sm">ARIOS Ingeniería</span>
