EVA-27 feat: Se emplea tag para selector múltiple en el formulario de crear y editar colaboradores.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -156,11 +156,12 @@
                                                         <div id="form-step-2" data-toggle="validator">
                                                             <div class="form-group">
                                                                 <div class="form-row">
+                                                                    <input id="asd"  hidden value="{{ contratos_colaborador }}">
                                                                     <div class="col-md-6">
                                                                         {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato_id  mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag contrato 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=colaborador.contrato_id required="" mensaje_validacion='Por favor seleccione un contrato' multiple='multiple' invalido=errores.contrato %}
+                                                                        {% select_multiple_tag contrato 'contrato_id[]' 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value="" required="" mensaje_validacion='Por favor seleccione un contrato' multiple='multiple' invalido=errores.contrato %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -263,11 +264,12 @@
     <script>
         $(document).ready(function () {
             $('.select2').select2();
-             $('#contrato_id_select_id').select2(
+             $('#contrato_id').select2(
                     {
                         placeholder: "Seleccione un contrato"
                     });
-             $('#contrato_id_select_id').next().find("input").css("min-width","200px");
+             $('#contrato_id').next().find("input").css("min-width","200px");
+             $('#contrato_id').val(JSON.parse($('#asd').val())).trigger("change");
         });
     </script>
 {% endblock scripts%}
