--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -156,7 +156,7 @@
                                                         <div id="form-step-2" data-toggle="validator">
                                                             <div class="form-group">
                                                                 <div class="form-row">
-                                                                    <input id="asd"  hidden value="{{ contratos_colaborador }}">
+                                                                    <input id="multiple"  hidden value="{{ contratos_colaborador }}">
                                                                     <div class="col-md-6">
                                                                         {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato_id  mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
                                                                     </div>
@@ -269,7 +269,7 @@
                         placeholder: "Seleccione un contrato"
                     });
              $('#contrato_id').next().find("input").css("min-width","200px");
-             $('#contrato_id').val(JSON.parse($('#asd').val())).trigger("change");
+             $('#contrato_id').val(JSON.parse($('#multiple').val())).trigger("change");
         });
     </script>
 {% endblock scripts%}
