EVA-26 feat: Se estandariza el tamaño de los íconos de las empresas seleccionadas.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -29,3 +29,9 @@ input[type=checkbox] ~ label:before {
     color: #666666!important;
 }
 
+.seleccionEmpresaGlobal {
+    height:60px;
+    width:auto;
+    max-width:500px;
+    padding-bottom: 6px;
+}
