--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -29,6 +29,9 @@
             </li>
         </ul>
     </div>
+    <div class="hidden-md-down dropdown-icon-menu position-relative">
+        <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.empresa.logo }}">
+    </div>
 
     <!-- DOC: mobile button appears during mobile width -->
     <div class="hidden-lg-up">
