EVA-26 feat: Se incluye un tootltip en el logo que se visualiza en el encabezado de la aplicación.

--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <div class="hidden-md-down dropdown-icon-menu position-relative">
-        <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.empresa.logo }}">
+        <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.empresa.logo }}"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="{{ request.session.empresa.nombre}}">
     </div>
 
     <!-- DOC: mobile button appears during mobile width -->
