--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -13,17 +13,17 @@
 
     <!-- DOC: nav menu layout change shortcut -->
     <div class="hidden-md-down dropdown-icon-menu position-relative">
-        <a href="#" class="header-btn btn js-waves-off" data-action="toggle" data-class="nav-function-hidden" title="Hide Navigation">
+        <a href="#" class="header-btn btn js-waves-off" data-action="toggle" data-class="nav-function-hidden" title="Ocultar menú lateral">
             <i class="ni ni-menu"></i>
         </a>
         <ul>
             <li>
-                <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-minify" title="Minify Navigation">
+                <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-minify" title="Minimizar menú lateral">
                     <i class="ni ni-minify-nav"></i>
                 </a>
             </li>
             <li>
-                <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-fixed" title="Lock Navigation">
+                <a href="#" class="btn js-waves-off" data-action="toggle" data-class="nav-function-fixed" title="Bloquear menú lateral">
                     <i class="ni ni-lock-nav"></i>
                 </a>
             </li>
