EVA-31 refactor: Se modifica el orden como se muestra la información para el contacto en caso de emergencia.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
@@ -176,10 +176,10 @@
                                                                     <b>En caso de emergencia llamar a:</b> {{ colaborador.nombre_contacto }}
                                                                 </small>
                                                                 <small class="mt-0 mb-3 text-muted">
-                                                                    <b>Parentesco:</b> {{ colaborador.parentesco }}
+                                                                    <b>Teléfono:</b> {{ colaborador.telefono_contacto }}
                                                                 </small>
                                                                 <small class="mt-0 mb-3 text-muted">
-                                                                    <b>Teléfono de contacto:</b> {{ colaborador.telefono_contacto }}
+                                                                    <b>Parentesco:</b> {{ colaborador.parentesco }}
                                                                 </small>
                                                             </h5>
                                                         </div>
