EVA-24 refactor: Se elinina la vista de terminar sesión y se reutiliza la de cerrar sesión.

--- a/Administracion/templates/Administracion/Autenticacion/password_reset_complete.html
+++ b/Administracion/templates/Administracion/Autenticacion/password_reset_complete.html
@@ -20,7 +20,7 @@
                         </div>
                         <br><br>
                             <h4 style="text-align: center">La contraseña se cambió con éxito</h4>
-                             <a style="text-align: center" href="{% url 'Administracion:terminar-sesion' %}" >Ir a la página para inicio de sesión</a>
+                             <a style="text-align: center" href="{% url 'Administracion:cerrar-sesion' %}" >Ir a la página para inicio de sesión</a>
                     </div>
                 </div>
             </div>
