EVA-34 fix: Se soluciona el problema con los input  del inicio de sesión y restablecimiento de contraseña.

--- a/Administracion/templates/Administracion/Autenticacion/password_reset_confirm.html
+++ b/Administracion/templates/Administracion/Autenticacion/password_reset_confirm.html
@@ -31,7 +31,7 @@
                                 {{ form.new_password2.errors }}
                                 <div class="form-group">
                                     <label class="id_new_password2" for="contraseña">Confirmación de Contraseña</label>
-                                    <input type="password" id="id_new_password2" name="new_password2" class="form-control form-control-lg" placeholder="Confirme la contraseña"  required style="font-size: 0.8125rem;">
+                                    <input type="password" id="id_new_password2" name="new_password2" class="form-control" placeholder="Confirme la contraseña"  required style="font-size: 0.8125rem;">
                                     <div class="invalid-feedback">Por favor digite la contraseña</div>
                                 </div>
                                 <div class="row no-gutters" style="justify-content: center">
