--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="contraseña">Contraseña</label>
-                                <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
                                 <div class="invalid-feedback">Por favor digite su contraseña</div>
                             </div>
                             <div class="form-group text-left">
